-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 13
-
Component/s: hotspot
-
b15
-
generic
-
generic
-
Not verified
This change is proposing a mechanism to allow (some) GC threads to participate in thread claiming.
- blocks
-
JDK-8221435 Shenandoah should not mark through weak roots
-
- Resolved
-
- relates to
-
JDK-8221785 Let possibly_parallel_threads_do cover the same threads as threads_do
-
- Resolved
-
-
JDK-8221516 fatal error: Thread SATB queue has an unexpected active state
-
- Closed
-
-
JDK-8219613 Use NonJavaThread PtrQueues
-
- Resolved
-
1.
|
Quarantine Shenandoah string dedup tests |
|
Resolved | Zhengyu Gu | |
2.
|
Unquarantine Shenandoah string dedup tests |
|
Resolved | Zhengyu Gu |